tests/paczka1/fuzzy1/37925189.err
Error in line 6: YG1nhYmep A56 -4,3
Error in line 13: 4QsRX7WocJV A56 22,6
Error in line 3: YG1nhYmep A56 73,8
Error in line 31: foHcxk A639 18,9
